# cardbleed

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: make_demo.py
src/cardbleed/: __init__.py  __main__.py  cli.py  corners.py  errors.py  filters.py  formats.py  geometry.py  process.py  selfcheck.py  sizing.py  synthesis.py
