[project]
name = "cardbleed"
version = "0.1.0"
description = "Extend the borders of card scans for printing — continues the existing border pattern without re-encoding the original image data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Erik Bävenstrand" }]
requires-python = ">=3.11"
dependencies = [
    "pillow>=10",
    "numpy>=1.26",
    "jpeglib>=1.0",
    "rich-click>=1.8",
]
keywords = ["card", "proxy", "printing", "bleed", "border", "image", "tcg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Printing",
]

[project.urls]
Repository = "https://github.com/ErikBavenstrand/cardbleed"
Issues = "https://github.com/ErikBavenstrand/cardbleed/issues"

[project.scripts]
cardbleed = "cardbleed:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cardbleed"]
