[project]
name = "cardbleed"
dynamic = ["version"]
description = "Extend the borders of card scans for printing — continues the existing border pattern without re-encoding the original image data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Erik Bävenstrand" }]
requires-python = ">=3.11"
dependencies = [
    "pillow>=10",
    "numpy>=1.26",
    "jpeglib>=1.0",
    "rich-click>=1.8",
]
keywords = ["card", "proxy", "printing", "bleed", "border", "image", "tcg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Printing",
]

[project.urls]
Repository = "https://github.com/ErikBavenstrand/cardbleed"
Issues = "https://github.com/ErikBavenstrand/cardbleed/issues"

[project.scripts]
cardbleed = "cardbleed:cli"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
# the multiplication sign is used deliberately in size displays (400×550)
allowed-confusables = ["×"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cardbleed/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cardbleed"]
